[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/game_graph/assets/icon_new.svg" type="Texture" id=1]
[ext_resource path="res://addons/game_graph/editor/graph/nodes/choice/GameGraphChoiceNode.gd" type="Script" id=2]
[ext_resource path="res://addons/game_graph/editor/graph/nodes/dialog/GameGraphDialogLine.tscn" type="PackedScene" id=3]

[node name="GameGraphChoiceNode" type="GraphNode"]
rect_min_size = Vector2( 150, 100 )
title = "Dialog choice"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 0, 0, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 24.0
margin_right = 198.0
margin_bottom = 52.0
show_delete_btn = false

[node name="Control" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 53.0
margin_right = 198.0
margin_bottom = 75.0

[node name="Button" type="Button" parent="Control"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 1 )
flat = true
[connection signal="edit_pressed" from="Question" to="." method="_on_Question_edit_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
